updating project, needed fixing on mobile side

--- a/style.css
+++ b/style.css
@@ -102,8 +102,15 @@ button#login{
     margin-left: 37%;
 }
 @media only screen and (max-width:600px){
+    nav{
+        width:100%;
+
+    }
+    div.carousel{
+        width: 100%;
+    }
     img.shared{
-        margin-right:10%;
+        margin-right:5%;
     }
 
 }
